Result of mvn rewrite:run
Signed-off-by: Thomas Darimont <thomas.darimont@oidf.org>