@@ -133,14 +133,14 @@ public class FAPI1AdvancedFinalBrV1TestPlan implements TestPlan {
 			case "openbanking_uk":
 				certProfile = "UK-OB";
 				if (par) {
-					throw new RuntimeException(String.format("Invalid configuration for %s: PAR are not used in UK",
+					throw new RuntimeException("Invalid configuration for %s: PAR are not used in UK".formatted(
 						MethodHandles.lookup().lookupClass().getSimpleName()));
 				}
 				break;
 			case "consumerdataright_au":
 				certProfile = "AU-CDR";
 				if (!privateKey) {
-					throw new RuntimeException(String.format("Invalid configuration for %s: Only private_key_jwt is used for AU-CDR",
+					throw new RuntimeException("Invalid configuration for %s: Only private_key_jwt is used for AU-CDR".formatted(
 						MethodHandles.lookup().lookupClass().getSimpleName()));
 				}
 				break;
@@ -152,7 +152,7 @@ public class FAPI1AdvancedFinalBrV1TestPlan implements TestPlan {
 				break;
 			case "openbanking_ksa":
 				if (!par) {
-					throw new RuntimeException(String.format("Invalid configuration for %s: PAR is required for KSA OB",
+					throw new RuntimeException("Invalid configuration for %s: PAR is required for KSA OB".formatted(
 						MethodHandles.lookup().lookupClass().getSimpleName()));
 				}
 				certProfile = "KSA-OB";
